capncrunch-dr.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: capncrunch-com
    namespace: web-system
spec:
    host: capncrunch-com.web-system.svc.cluster.local
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpCookie:
            name: AWSELBAuthSessionCookie-0
            ttl: 0s
